@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Use promises instead of deprecated delay helper from DefaultHelpers.
 
 1.000     2017-12-17 17:33:49 EST
   - INCOMPATIBLE CHANGE: The use_sereal option now requires Mojo::IOLoop::Subprocess::Role::Sereal.
